# umm-next

./: .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  Cargo.toml  EULA.md  README.md  about.hbs  about.toml  build.rs  context.md  flake.nix  pyo3-config.toml  pyproject.toml  rustfmt.toml  task.md  test  try-python-scripting-guide.md
.cargo/: config.toml
.github/workflows/: rust-cross-build.yml
docs/: SCRIPT-API-REFERENCE.md  grading.md
examples/: sample.rn
fixtures/java/rune-hello/: Main.java
fixtures/python/diff-ok/: main.py
fixtures/python/diff-runtime/: main.py
fixtures/python/diff-stdin/: main.py
fixtures/python/diff-syntax-error/: main.py
fixtures/python/docs-late-string/: main.py
fixtures/python/hello/: hello.py
fixtures/python/hello-with-docstrings/: hello.py
fixtures/python/query-cases/: comprehensive.py  example.py
fixtures/rune/: arraylist_diff.rn  arraylist_docs.rn  arraylist_mutation.rn  arraylist_query.rn  arraylist_visible_tests.rn  gradescope_json.rn  happy.rn  missing_required.rn  python_diff.rn  python_docs.rn  python_query.rn  python_query_constraints.rn  python_run_context.rn  query.rn  query_constraints.rn  readme_all_visible.rn
fixtures/rune/ergonomics/: diff_expect.rn  diff_expect_chain.rn  diff_expect_with_input.rn  query_default_constraint.rn  query_defines_class.rn  query_defines_function.rn  query_imports_from.rn  query_imports_module.rn  query_must_not_for_loop_fail.rn  query_must_not_for_loop_pass.rn  query_must_not_recursion_fail.rn  query_must_not_recursion_pass.rn  query_must_not_while_loop_pass.rn  query_uses_assert.rn  query_uses_decorator.rn  query_uses_dict_comprehension.rn  query_uses_generator_expression.rn  query_uses_lambda.rn  query_uses_raise.rn  query_uses_set_comprehension.rn  query_uses_try_except.rn  query_uses_with_statement.rn  query_uses_yield.rn
grading/: sample.rhai
grading/interfaces and generics/: part1.rhai  part2.rhai  part3.rhai
grading/labs/lab 8A - recursion and trees/: lab8A - recursion and trees.rhai
grading/lists/: part1.rhai  part2.rhai
grading/programming_ide_practice/: practice_2.rhai
grading/projects/round_robin/: round_robin.rhai
grading/projects/shoppinglist/: arraylist-javadoc.rhai  arraylist-tests.rhai  shoppinglist.rhai
grading/projects/workaheadqueue/: workaheadqueue.rhai
grading/pyramid_scheme/: pyramid_scheme.rhai
grading/queues/: array.rhai  linked.rhai
grading/stacks/: part1.rhai  part2.rhai
grading/unit testing/: part1.rhai  part2.rhai  part3-1.rhai  part3-2.rhai
notes/: Coercing PyTest into giving us python error messag.md  Frontend Structured Generation Language (SGLang).md  Reading Sqlite databases.md  old-autograder-context.md
notes/rune/: Rune Compiling and Running.md  Rune External Types, Methods, Operator Overloads,.md  Rune Macros.md
notes/testing/: arraylist-example-lab-main.md  lab-4-hello-world.md
python/examples/: arraylist_graders.py
python/tests/: test_graders.py
src/: config.rs  constants.rs  grade.rs  health.rs  java.rs  lib.rs  main.rs  parsers.rs  process.rs  retrieval.rs  types.rs  util.rs  vscode.rs
src/java/: config.rs  file.rs  mod.rs  parser.rs  parsers.rs  paths.rs  project.rs  queries.rs  util.rs
src/java/grade/: context.rs  diagnostics.rs  diff.rs  docs.rs  feedback.rs  gradescope.rs  mod.rs  query.rs  results.rs  tests.rs
src/java/prompts/: javadoc.md  mutation_testing_2.md  retrieval_system_message_intro.md  retrieval_system_message_outro.md
src/java/queries/: class_constructors.scm  class_declaration.scm  class_fields.scm  class_name.scm  (+9 more)
src/prompts/: mutation_testing.md  system_message_intro.md  system_message_outro.md
src/python/: config.rs  error.rs  file.rs  graders.rs  mod.rs  parser.rs  paths.rs  project.rs  results.rs  util.rs  utils.rs
src/queries/: class_methods.scm  class_with_name.scm  interface_constants.scm  interface_declaration.scm  interface_methods.scm  main_method.scm  method_invocation.scm  method_invocations_with_arguments.scm  method_invocations_with_object.scm
src/scripting/: mod.rs
tests/: bon_builders_smoke.rs  diff_grader_tests.rs  java_parser_tests.rs  java_parsers_tests.rs  paths_defaults.rs  pit_args.rs  python_diff_grader_tests.rs  python_docs_grader_tests.rs  python_parser_tests.rs  python_query_grader_tests.rs  python_rune_ergonomics_tests.rs  python_rune_integration.rs  query_helpers.rs  readme_visible_graders.rs  rune_integration.rs  rune_pit_integration.rs  rune_support.rs  snapshot_sanity.rs
tests/snapshots/: python_rune_ergonomics_tests__diff_expect_chain.snap  python_rune_ergonomics_tests__diff_expect_with_input_method.snap  python_rune_ergonomics_tests__query_must_not_for_loop_fails_when_present.snap  python_rune_ergonomics_tests__query_must_not_recursion_fails_when_present.snap  python_rune_ergonomics_tests__query_uses_decorator.snap  python_rune_integration__python_rune_query_constraints_stderr.snap  python_rune_integration__python_rune_query_constraints_stdout.snap  python_rune_integration__python_rune_query_stderr.snap  python_rune_integration__python_rune_query_stdout.snap  rune_integration__rune_gradescope_results_json.snap  rune_integration__rune_happy_stderr.snap  rune_integration__rune_happy_stdout.snap  rune_integration__rune_missing_required_stderr.snap  rune_integration__rune_query_constraints_stderr.snap  rune_integration__rune_query_stderr.snap  rune_integration__rune_query_stdout.snap  rune_pit_integration__rune_arraylist_docs_example_stderr.snap  rune_pit_integration__rune_arraylist_docs_example_stdout.snap  rune_pit_integration__rune_arraylist_docs_solution_stderr.snap  rune_pit_integration__rune_arraylist_docs_solution_stdout.snap  rune_pit_integration__rune_arraylist_mutation_example_stderr.snap  rune_pit_integration__rune_arraylist_mutation_example_stdout.snap  rune_pit_integration__rune_arraylist_mutation_solution_stderr.snap
umm_derive/: Cargo.toml
umm_derive/src/: lib.rs  lib.rs.bak
(+47 files in other folders)
