cargo-features = ["profile-rustflags"]

[package]
name = "umm"
version = "0.3.0"
edition = "2024"
default-run = "umm"
license = "MIT"
description = "A java build tool and scriptable autograder that generates feedback."
repository = "https://github.com/DhruvDh/umm"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
which = "8.0.0"
bpaf = { version = "0.9.20", features = ["bright-color"] }
glob = "0.3.3"
peg = "0.8.5"
tree-sitter = "0.25.10"
# tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java.git", rev = "39a11c8330d0b2ad75310456c378396785f79a4e" }
tree-sitter-java = "0.23.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
self_update = { version = "0.42.0", features = ["rustls"] }
postgrest = "1.6.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
async-openai = { version = "0.31.1", features = ["chat-completion"] }
uuid = { version = "1.19.0", features = ["std", "v4"] }
snailquote = "0.3.1"
similar = { version = "2.7.0", features = [
  "text",
  "inline",
  "unicode",
  "unicode-segmentation",
] }
owo-colors = "4.2.3"
itertools = "0.14.0"
thiserror = "2.0.17"
state = "0.6.0"
rune = "0.14.1"
bon = { version = "3.8.1", features = [
  "implied-bounds",
  "experimental-overwritable",
] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.39.0", features = ["redactions"] }

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[package.metadata.bundle]
name = "umm"
identifier = "io.github.dhruvdh.umm"
version = "0.2.0-spring24"
short-description = "A java build tool and scriptable autograder that generates feedback."
category = "public.app-category.developer-tools"
